# argus

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.sandbox  LICENSE  Makefile  README.md  config.example.toml  config.example.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: go.yml  rust.yml
cmd/argus/: main.go
feishu/: Cargo.toml
feishu/src/: api.rs  auth.rs  client.rs  lib.rs  pbbp2.rs  types.rs  ws.rs
internal/agent/: agent.go  context.go  event.go  harness.go  prompts.go  scheduler.go  trace.go  types.go
internal/config/: config.go
internal/cron/: cron.go  db_scheduler.go  db_scheduler_test.go
internal/docindex/: ingest.go
internal/embedding/: client.go  worker.go
internal/feishu/: adapter.go  card.go  card_test.go  client.go  dedup.go  dispatcher.go  event.go  filter.go  frontend.go  handler.go  outbox_presenter.go  presentation.go  presentation_test.go
internal/model/: anthropic.go  factory.go  fallback.go  gemini.go  model.go  openai.go  types.go  vertex.go  vertex_ai.go  vertex_claude.go  vertex_gemini.go
internal/render/: feishu.go  feishu_test.go  latex.go  renderer.go
internal/sandbox/: docker.go  local.go  sandbox.go
internal/skill/: builtin.go  builtin_unix.go  builtin_windows.go  calorie.go  coding.go  index.go  loader.go  loader_test.go  skill.go
internal/skill/seeds/coding/: SKILL.md
internal/skill/seeds/posix-cli/: SKILL.md
internal/sqlsandbox/: sandbox.go  sandbox_test.go
internal/store/: memory.go  memory_test.go  postgres.go  repair.go  store.go
internal/store/migrations/: 001_init.sql  002_food_log.sql  004_traces.sql  005_async_tasks.sql  006_reply_content.sql  006_task_traces.sql  007_conversation_view.sql  007_cron_schedules.sql  008_clean_media_paths.sql
internal/task/: worker.go
internal/tool/: activate_skill.go  async_task.go  async_task_test.go  cli.go  cli_test.go  context.go  cron.go  cron_test.go  current_time.go  db.go  db_command.go  db_exec.go  db_structured.go  fetch.go  file.go  file_test.go  finish_task.go  forget.go  registry.go  remember.go  save_skill.go  search.go  search_docs.go  search_history.go  search_tavily.go  tool.go
migrations/: 002_memory_system.sql  003_message_queue.sql  004_traces.sql  005_message_summary.sql  008_crons.sql
src/: agent.rs  config.rs  frontend.rs  main.rs  recovery.rs  render.rs  scheduler.rs  server.rs
src/agent/: docindex.rs  embedding.rs  harness.rs  mod.rs  skill.rs  worker.rs
src/agent/tool/: cancel_cron.rs  cli.rs  create_cron.rs  create_task.rs  current_time.rs  db.rs  fetch.rs  finish_task.rs  forget.rs  list_crons.rs  list_docs.rs  mod.rs  read_file.rs  remember.rs  search.rs  search_docs.rs  search_history.rs  skill.rs  update_cron.rs  write_file.rs
src/database/: conversation.rs  crons.rs  documents.rs  memories.rs  messages.rs  mod.rs  notifications.rs  traces.rs
src/embedder/: client.rs  docindex.rs  mod.rs
src/frontend/: feishu.rs  mod.rs
src/gateway/: feishu.rs  mod.rs  transcribe.rs
src/upstream/: anthropic.rs  mod.rs  openai.rs  openai_responses.rs  types.rs
