[workspace]
resolver = "2"
members = [".", "feishu"]

[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
feishu = { path = "feishu" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7" }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest-eventsource = "0.6"
futures = "0.3"
async-stream = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
scraper = "0.22"
pgvector = { version = "0.4", features = ["sqlx"] }
ratex-parser = { git = "https://github.com/erweixin/RaTeX" }
ratex-layout = { git = "https://github.com/erweixin/RaTeX" }
ratex-render = { git = "https://github.com/erweixin/RaTeX", features = ["embed-fonts"] }
ratex-types = { git = "https://github.com/erweixin/RaTeX" }
regex = "1"

[dev-dependencies]
tempfile = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
